--- a/web/src/components/Info/index.module.css
+++ b/web/src/components/Info/index.module.css
@@ -19,7 +19,7 @@
   height: 14.8vh;
   width: 8.4vw;
   margin-top: 0.4vh;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05) 0px 0px 6px;
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05) 0px 0px 6px; */
 }
 
 .textHousing {
@@ -33,8 +33,8 @@
 
 .heading {
   font-size: 1.9vw;
-  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.4), -3px 0px 7px rgba(0, 0, 0, 0.4),
-    0px 4px 7px rgba(0, 0, 0, 0.4);
+  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
+    0px 4px 7px rgba(0, 0, 0, 0.25);
   font-family: 'Black';
   margin-left: -0.18vh;
   height: 4vh;
@@ -42,8 +42,8 @@
 
 .description {
   font-size: 1.12vw;
-  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.4), -3px 0px 7px rgba(0, 0, 0, 0.4),
-    0px 4px 7px rgba(0, 0, 0, 0.4);
+  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
+    0px 4px 7px rgba(0, 0, 0, 0.25);
   line-height: 1;
 }
 
@@ -56,13 +56,13 @@
 
 .icon {
   font-size: 1.2vw;
-  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.45));
 }
 
 .smallText {
   font-size: 1.1vw;
-  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.4), -3px 0px 7px rgba(0, 0, 0, 0.4),
-    0px 4px 7px rgba(0, 0, 0, 0.4);
+  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
+    0px 4px 7px rgba(0, 0, 0, 0.25);
 }
 
 .middle {
@@ -112,5 +112,5 @@
 
 .star {
   font-size: 1.2vw;
-  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.45));
 }
