--- a/web/src/components/Info/Bottom/index.module.css
+++ b/web/src/components/Info/Bottom/index.module.css
@@ -16,6 +16,8 @@
   text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.3), -3px 0px 7px rgba(0, 0, 0, 0.3),
     0px 4px 7px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
 .buttonText {
@@ -33,6 +35,8 @@
   text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.3), -3px 0px 7px rgba(0, 0, 0, 0.3),
     0px 4px 7px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
 .input {
